# o1js-bindings

./: .gitignore  .gitmodules  MINA_COMMIT  README.md  flake.nix  index.ts  package-lock.json  package.json  snarky-class-spec.js
.github/workflows/: lint.yaml  rust.yml
compiled/_node_bindings/: plonk_wasm.cjs
compiled/node_bindings/: index.node  plonk_native.node  plonk_wasm.cjs  plonk_wasm.d.cts  plonk_wasm_bg.wasm  plonk_wasm_bg.wasm.d.ts
compiled/node_bindings/native/: plonk_native.node
compiled/web_bindings/: plonk_wasm.d.ts  plonk_wasm.js  plonk_wasm_bg.wasm  plonk_wasm_bg.wasm.d.ts
crypto/: bigint-helpers.ts  bigint.unit-test.ts  bindings.ts  constants.ts  elliptic-curve-endomorphism.ts  elliptic-curve-examples.ts  elliptic-curve.ts  elliptic-curve.unit-test.ts  elliptic_curve.ts  elliptic_curve.unit-test.ts  finite-field-examples.ts  finite-field.ts  finite-field.unit-test.ts  finite_field.ts  glv.ts  glv.unit-test.ts  poseidon.ts  poseidon.unit-test.ts
crypto/benchmarks/: fast-inverse.ts  inverse.ts  inverse.unit-test.ts
crypto/bindings/: bigint256.ts  bindings.unit-test.ts  conversion-base.ts  conversion-core.ts  conversion-proof.ts  conversion-verifier-index.ts  curve.ts  field.ts  kimchi-types.ts  srs.ts  test-utils.ts  vector.ts
crypto/test-vectors/: dump-test-vectors.sh  poseidon-kimchi.ts  poseidon-legacy.ts
crypto/test_vectors/: dump-test-vectors.sh  dune
js/: addons.js  snarky-class-spec.js  wrapper.d.ts  wrapper.js  wrapper.web.js
js/node/: native-backend.js  node-backend.js  node-native-backend.js
js/web/: web-backend.js  worker-spec.js
kimchi/js/: README.md  bindings-bigint256.js  bindings-field.js  bindings-vector.js  bindings.js
kimchi/js/js_backend/: vector.js
kimchi/js/node_js/: build.sh  dune
kimchi/js/test/: bindings_js_test.ml  build.sh  dune  node_wrapper.ml  test_simple.ml
kimchi/js/test/nodejs/: copy_over.sh
kimchi/js/web/: build.sh  dune
kimchi/wasm/: Cargo.toml  README.md  rust-toolchain.toml
kimchi/wasm/src/: bn254_fp_plonk_index.rs  bn254_plonk_proof.rs  circuit.rs  gate_vector.rs  lib.rs  oracles.rs  pasta_fp_plonk_index.rs  pasta_fq_plonk_index.rs  plonk_proof.rs  plonk_verifier_index.rs  rayon.rs  srs.rs  wasm_vector.rs
kimchi/wasm/src/arkworks/: bigint_256.rs  bn254_fq.rs  group_affine.rs  mod.rs
kimchi/wasm/src/bn254_plonk_proof/: circuit.rs  mod.rs  snark.rs  type.rs
lib/: binable.ts  binable.unit-test.ts  encoding.ts  from-layout-signable.ts  from-layout.ts  generic.ts  pickles.ts  provable-bigint.ts  provable-generic.ts  provable-snarky-bn254.ts  provable-snarky.ts
mina-transaction/: derived-leaves.ts  index.ts  leaves.ts  transaction-leaves-bigint.ts  transaction-leaves-json.ts  transaction-leaves.ts  type.ts  util.ts
mina-transaction/v1/: derived-leaves.ts  types.ts
mina-transaction/v2/: index.ts  leaves.ts  type.ts
ocaml/: dune  o1js_constants.ml  overrides.js  snarky_js_constants.ml
ocaml/js/: dune
ocaml/jsoo_exports/: dune  o1js_native.ml
ocaml/lib/: consistency_test.ml  dune  local_ledger.ml  o1js_bindings_lib.ml  ocaml_object.ml  pickles_bindings.ml  pickles_bindings.mli  snarky_bindings.ml  snarky_bindings.mli  snarky_js_bindings_lib.ml  test.ml  util.ml
scripts/: build-o1js-node-artifacts.sh  build-o1js-node.sh  build-o1js-web.sh  build-snarkyjs-node-artifacts.sh  build-snarkyjs-node.sh  build-snarkyjs-web.sh  check-commit.sh  prepare-dune-build.sh  update-o1js-bindings.sh  update-snarkyjs-bindings.sh  update-wasm-and-types.sh  update-wasm-types.sh
