(library
 (name node_backend)
 (js_of_ocaml
  (flags
   (:include flags.sexp))
  (javascript_files node_backend.js))
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_version js_of_ocaml-ppx)))

;; Call wasm-pack using dune rules.
;; Anytime there is a change in a list listed in deps, the build will happen
(rule
 (targets
  plonk_wasm_bg.wasm.d.ts
  plonk_wasm_bg.wasm
  plonk_wasm.d.ts
  plonk_wasm.js
  flags.sexp)
 (deps
  ../../wasm/Cargo.toml
  ../../wasm/Cargo.lock
  (source_tree ../../wasm/src)
  (source_tree ../../wasm/.cargo/config)
  (source_tree ../../../../../../crypto/proof-systems))
 (locks /cargo-lock) ; lock for rustup
 (action
  (progn
   (run chmod -R +w ../../wasm .)
   (run ./build.sh)
   (write-file flags.sexp "()"))))
